# ChangeLog file for clients
# This file is updated with Maddlog

* Wed Dec  8 2010 Fabian Groffen <fabian@cwi.nl>
- Added support for \dn to list schemas or describe a specific one

* Thu Nov 25 2010 Fabian Groffen <fabian@cwi.nl>
- Added support for \df to list functions or describe a specific one
- Added support for \ds to list sequences or describe a specific one

* Mon Nov 22 2010 Fabian Groffen <fabian@cwi.nl>
- Added support for wildcards * and ? in object names given to \d
  commands, such that pattern matching is possible, e.g. \d my*
- Added support for \dS that lists also system tables

* Fri Nov 19 2010 Fabian Groffen <fabian@cwi.nl>
- object names given to \d are now lowercased, unless quoted by either
  single or double quotes
- Strip any trailing whitespace with the \d command
