@@ -66,6 +66,7 @@ usage(const char *prog, int xit)
 	fprintf(stderr, " -d database | --database=database  database to connect to\n");
 	fprintf(stderr, " -f          | --functions        dump functions\n");
 	fprintf(stderr, " -D          | --describe         describe database\n");
+	fprintf(stderr, " -N          | --inserts          use INSERT INTO statements\n");
 	fprintf(stderr, " -q          | --quiet            don't print welcome message\n");
 	fprintf(stderr, " -t          | --trace            trace mapi network interaction\n");
 	fprintf(stderr, " -?          | --help             show this usage message\n");
@@ -86,6 +87,7 @@ main(int argc, char **argv)
 	int trace = 0;
 	int describe = 0;
 	int functions = 0;
+	int useinserts = 0;
 	int c;
 	Mapi mid;
 	int quiet = 0;
@@ -99,6 +101,7 @@ main(int argc, char **argv)
 		{"database", 1, 0, 'd'},
 		{"describe", 0, 0, 'D'},
 		{"functions", 0, 0, 'f'},
+		{"inserts", 0, 0, 'N'},
 		{"trace", 2, 0, 't'},
 		{"user", 1, 0, 'u'},
 		{"quiet", 0, 0, 'q'},
@@ -167,7 +170,7 @@ main(int argc, char **argv)
 		mnstr_destroy(config);
 	}
 
-	while ((c = getopt_long(argc, argv, "u:p:d:Dfqh:t::?", long_options, NULL)) != -1) {
+	while ((c = getopt_long(argc, argv, "u:p:d:DNfqh:t::?", long_options, NULL)) != -1) {
 		switch (c) {
 		case 'u':
 			user = optarg;
@@ -260,7 +263,7 @@ main(int argc, char **argv)
 	if (functions)
 		c = dump_functions(mid, out, NULL, NULL);
 	else
-		c = dump_database(mid, out, describe);
+		c = dump_database(mid, out, describe, useinserts);
 	mnstr_flush(out);
 
 	mapi_disconnect(mid);
